.kubernetes/e2e-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: enki
  name: enki-e2e-test-website
spec:
  selector:
    matchLabels:
      app: enki-e2e-test-website
  replicas: 1
  template:
    metadata:
      labels:
        app: enki-e2e-test-website
    spec:
      containers:
        - name: enki-e2e-test-website
          image: jaskaransarkaria/enki-website:v6.3.6
          resources:
            requests:
              memory: "64Mi"
              cpu: "32m"
            limits:
              memory: "512Mi"
              cpu: "125m"
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: sitemap-volume
              mountPath: /usr/src/app/src/
      volumes:
        - name: sitemap-volume
          configMap:
            name: sitemap

      imagePullSecrets:
        - name: regcred
