.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enki-website
spec:
  selector:
    app: enki-website
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
